Renamed WorkoutSessionExerciseSetRequest to WorkoutSessionExerciseSetRequestDTO
