# src/main/java/com/kuba/GymTrackerAPI/workoutSessionExerciseSet/WorkoutSessionExerciseSetRequestDTO.java
@@ -2,7 +2,7 @@ package com.kuba.GymTrackerAPI.workoutSessionExerciseSet;
 
 import jakarta.validation.constraints.NotNull;
 
-public record WorkoutSessionExerciseSetRequest(
+public record WorkoutSessionExerciseSetRequestDTO(
         @NotNull(message = "Počet opakování nesmí být prázdný!")
         int repetitions,
         @NotNull(message = "Váha nesmí být prázdná!")
